@@ -6,6 +6,7 @@ Comment=QmidiNet is a MIDI Network Gateway via UDP/IP Multicast
 Exec=@ac_prefix@/bin/qmidinet
 Icon=qmidinet
 Categories=Audio;AudioVideo;Midi;X-Alsa;X-Jack;Qt;
+Keywords=MIDI;ALSA;JACK;Multicast;Network;UDP;IP;Qt;
 Terminal=false
 Type=Application
 X-SuSE-translate=true
