@@ -4,6 +4,11 @@ QmidiNet - A MIDI Network Gateway via UDP/IP Multicast
 ChangeLog
 
 
+GIT HEAD
+
+- Added application keywords to freedesktop.org's AppData.
+
+
 0.3.0  2015-09-21  Summer'15 release frenzy.
 
 - System tray icon now blinks on network send/receive activity.
